--- a/form_curriculum/form_curriculum.css
+++ b/form_curriculum/form_curriculum.css
@@ -1,15 +1,18 @@
         .container {
             background-color: whitesmoke;
+            display: flex;
             justify-content: center;
             margin-left: 18%;
             margin-right: 18%;
             display: flex;
             flex-direction: row;
+            height: 100%;
+            
         }
         
         .body {
             background-color: #858585;
-            height: 100%;
+            min-height: 100vh;
             margin: 0;
             display: flex;
             flex-direction: column;
@@ -20,8 +23,7 @@
         .personal-info {
             background: #282828;
             width: 40%;
-            height: 100%;
-            
+            padding-left: 10px;
         }
         
         .subtitle {
@@ -30,7 +32,7 @@
         }
         
         .img-container {
-            height: 25%;
+            height: auto;
             margin-left: 5%;
             margin-right: 5%;
             margin-bottom: 10%;
@@ -70,7 +72,6 @@
             margin-top: 10px;
             font-family: sans-serif;
             width: 75%;
-            margin-right: 10%;
             padding: 5px 10px;
         
         }
@@ -158,7 +159,7 @@
         }
         
         .description-txt {
-            height: 25%;
+            
             margin-left: 20px;
             display: flex;
             flex-direction: column;
