--- a/form_curriculum/form_curriculum.css
+++ b/form_curriculum/form_curriculum.css
@@ -1,26 +1,28 @@
 .container {
+  display: grid;
+  min-height: 100vh;
+  width: 90vw;
+  margin: auto;
+  grid-template-areas: "sidebar  cont";
+  grid-template-columns: 1fr 2fr;
+}
+
+.sidebar {
+  grid-area: sidebar;
+  background-color: #282828;
+  padding: 20px 10px;
+}
+
+.content {
+  grid-area: cont;
   background-color: #f4f4f4;
-  margin-left: 18%;
-  margin-right: 18%;
-  display: flex;
-  flex-direction: row;
-  height: 100%;
 }
 
 .body {
   background-color: #858585;
-  min-height: 100vh;
   margin: 0;
-  display: flex;
-  flex-direction: column;
   box-sizing: border-box;
   font-family: "Roboto";
-}
-
-.personal-info {
-  background: #282828;
-  width: 40%;
-  height: 100%;
 }
 
 .subtitle {
@@ -29,24 +31,17 @@
 }
 
 .img-container {
-  height: 25%;
-  margin-left: 5%;
-  margin-right: 5%;
-  margin-bottom: 10%;
-  align-content: center;
-  text-align: center;
-  align-items: center;
+  margin-bottom: 10px;
 }
 
 .circle-img {
   width: 140px;
   height: 140px;
   border: 3px solid rgb(77, 77, 77);
-  background-color: black(255, 255, 255);
-  border-radius: 150px;
+  border-radius: 140px;
   background-image: url(../Assets/Logo_Hackademy.png);
   margin: auto;
-  margin-top: 13%;
+  position: relative;
 }
 
 .circle-img:hover {
@@ -54,49 +49,57 @@
 }
 
 .add-img {
-  width: 44px;
-  height: 44px;
-  border: 3px solid rgb(77, 77, 77);
-  border-radius: 150px;
+  width: 50px;
+  height: 50px;
+  border: 2px solid rgb(77, 77, 77);
+  border-radius: 50px;
   background-image: url(../Assets/icon_add_image.png);
   background-color: rgb(158, 157, 157);
   position: absolute;
-  margin-top: 95px;
-  margin-left: 20px;
+  bottom: -10px;
+  right: -5px;
 }
 
-.input-a {
-  margin-top: 10px;
-  font-family: sans-serif;
-  width: 75%;
-  margin-right: 10%;
+.sidebar input {
   padding: 5px 10px;
+  box-sizing: border-box;
+  width: 100%;
+  margin: 0;
+  margin-bottom: 5px;
+  min-width: 20px;
 }
 
-#name-user {
-  margin-top: 10px;
-  font-family: sans-serif;
-  width: 80%;
+.sidebar label {
+  color: #c2c2c2;
+  font-weight: bold;
 }
 
 .i {
   color: white;
+  width: 20px;
+  margin-right: 5px;
+}
+
+.renglon {
+  display: flex;
+  flex-direction: row;
+  justify-content: start;
+  align-items: center;
 }
 
 .boton-guardar {
-  display: inline-block;
   padding: 0.46em 1.6em;
   border: 0.1em solid #000000;
-  margin-top: 20px;
   border-radius: 0.12em;
   font-family: "Roboto", sans-serif;
-  font-weight: 300;
+  font-weight: bold;
   color: #000000;
   text-shadow: 0 0.04em 0.04em rgba(0, 0, 0, 0.35);
   background-color: #70f356;
-  text-align: center;
   transition: all 0.15s;
   border-radius: 5px;
+  width: 100%;
+  margin-top: 20px;
 }
 
 .boton-guardar:hover {
@@ -106,19 +109,19 @@
 }
 
 .boton-add {
-  display: inline-block;
   padding: 0.46em 1.6em;
   border: 0.1em solid #ffffff;
-  margin: 1em 0em 4em 6em;
   border-radius: 0.12em;
   font-family: "Roboto", sans-serif;
-  font-weight: 300;
+  font-weight: bold;
   color: #ffffff;
   text-shadow: 0 0.04em 0.04em rgba(0, 0, 0, 0.35);
   background-color: #d10000;
-  text-align: center;
   transition: all 0.15s;
   border-radius: 5px;
+  cursor: pointer;
+  width: 100%;
+  margin-top: 10px;
 }
 
 .boton-add:hover {
@@ -128,14 +131,9 @@
   background-color: rgb(122, 0, 0);
 }
 
-.input-b {
-  width: 100%;
-}
-
 .picker-aptitudes {
-  margin-left: 8%;
-  width: 78%;
-  height: 3%;
+  width: 100%;
+  margin-bottom: 20px;
 }
 .new-soft {
   margin-left: 8%;
@@ -143,19 +141,17 @@
 }
 
 .lvl-domain {
-  margin: 8%;
   width: 100%;
 }
 
 .p-a {
   color: white;
-  font-size: 15px;
-  margin-left: 5%;
+  font-size: 20px;
+  margin-bottom: 5px;
+  font-weight: bold;
 }
 
 .description-txt {
-  height: 25%;
-  margin-left: 20px;
   display: flex;
   flex-direction: column;
 }
@@ -164,8 +160,7 @@
   border: 1px dashed;
   color: white;
   width: 90%;
-  margin: auto;
-  margin-top: 10%;
+  margin: 20px auto;
 }
 
 .li-a {
@@ -216,27 +211,19 @@
 
 @media (max-width: 540px) {
   .container {
-    flex-direction: column;
-    margin: 0;
-  }
-  .personal-info {
-    width: 100%;
-  }
-  .line-a {
-    margin-top: 10px;
+    grid-template-areas:
+      "sidebar"
+      "cont";
+    grid-template-columns: 1fr;
   }
 }
 
-@media (max-width: 714px) {
+@media (max-width: 714px) and (min-width: 541px) {
   .container {
-    margin-left: 0;
-    margin-right: 0;
+    width: 100vw;
+    grid-template-columns: 1fr 2fr;
   }
 }
 
 @media (max-width: 980px) {
-  .container {
-    margin-left: 0;
-    margin-right: 0;
-  }
 }
