--- a/form_curriculum/form_curriculum.css
+++ b/form_curriculum/form_curriculum.css
@@ -16,8 +16,46 @@
 .content {
   grid-area: cont;
   background-color: #f4f4f4;
-  padding: 60px 0px;
-  padding-left: 70px;
+  padding: 60px 35px;
+  }
+
+  .content .boton-add{
+    background-color: rgb(2, 134, 90);
+  } 
+  .content .boton-add:hover {
+    text-shadow: 0 0 2em rgba(255, 255, 255, 1);
+    color: #000000;
+    border-color: #000000;
+    background-color: rgb(255, 255, 255);
+  }
+
+  .boton-del{
+    background-color: rgb(255, 255, 255);
+    padding: 0.46em 1.6em;
+    border: 0.1em solid #ff0000;
+    border-radius: 0.12em;
+    font-family: "Roboto", sans-serif;
+    font-weight: bold;
+    color: #000000;
+    text-shadow: 0 0.04em 0.04em rgba(0, 0, 0, 0.35);
+    transition: all 0.15s;
+    border-radius: 5px;
+    width: 100%;
+    margin-top: 20px;
+    display: none;
+  }
+ 
+  .boton-eliminar:hover{
+    background-color: rgb(126, 3, 3);
+    color:rgb(255, 255, 255);
+    border: 0.1em solid #000000;
+  }
+
+.add-work{
+  display:  none ;
+}
+.add-school{
+  display: none ;
 }
 
 .body {
@@ -26,8 +64,9 @@
   box-sizing: border-box;
   font-family: "Roboto";
 }
-.sidebar textarea {
+.textarea {
   resize: none;
+  width: auto;
 }
 .subtitle {
   font-family: sans-serif;
@@ -65,6 +104,15 @@
 }
 
 .sidebar input {
+  padding: 5px 10px;
+  box-sizing: border-box;
+  width: 100%;
+  margin: 0;
+  margin-bottom: 5px;
+  min-width: 20px;
+}
+
+.content input {
   padding: 5px 10px;
   box-sizing: border-box;
   width: 100%;
@@ -216,8 +264,9 @@
 
 .line-b {
   border: 1px dashed;
-  color: black;
-  width: 90%;
+  color:black;
+  
+  margin: 10px auto;
 }
 
 @media (max-width: 540px) {
