--- a/form_curriculum/form_curriculum.css
+++ b/form_curriculum/form_curriculum.css
@@ -45,6 +45,10 @@
     display: none;
   }
  
+#data-list{
+  color: #ffffff;
+  background-color: #ffffff;
+}
   .boton-eliminar:hover{
     background-color: rgb(126, 3, 3);
     color:rgb(255, 255, 255);
@@ -57,6 +61,12 @@
 .add-school{
   display: none ;
 }
+.add-software{
+  display: none ;
+}
+.add-skill{
+  display: none ;
+}
 
 .body {
   background-color: #858585;
@@ -66,7 +76,6 @@
 }
 .textarea {
   resize: none;
-  width: auto;
 }
 .subtitle {
   font-family: sans-serif;
@@ -216,7 +225,7 @@
 }
 
 .line-a {
-  border: 1px dashed;
+  border: 2px dashed;
   color: white;
   width: 90%;
   margin: 20px auto;
