--- a/view_curriculum.css
+++ b/view_curriculum.css
@@ -6,6 +6,11 @@
   background-color: #1d1d1d;
   grid-template-areas: "experience cont education";
   grid-template-columns: 1fr 1fr 1fr;
+  background-image: url('/Assets/wallpaper-blur.png');
+  background-size: 100%;
+  background-position-y: -45%;
+  background-repeat: no-repeat;
+  background-attachment: scroll;
 }
 
 .experience {
@@ -19,10 +24,12 @@
 .content {
   grid-area: cont;
   padding: 40px;
+  padding-top: 60px;
   margin-top: 180px;
   align-items: center;
   text-align: center;
   background-color: rgb(34, 40, 56);
+  position: relative;
 }
 
 .education {
@@ -88,17 +95,20 @@
 }
 
 .img-container {
-  margin: 10px 50px;
-}
+  clip-path: polygon(50% 0, 95% 25%, 95% 75%, 50% 100%, 5% 75%, 5% 25%);
+  padding: 7px 7px 2px 7px;
+  background-color: whitesmoke;
+  position: absolute;
+  top: -150px;
+  left: 24%;
+} 
 
 .circle-img {
-  width: 140px;
-  height: 140px;
-  border: 3px solid rgb(77, 77, 77);
-  border-radius: 140px;
-  background-image: url(../Assets/Logo_Hackademy.png);
+  width: 200px;
+  height: 200px;
   margin: auto;
   position: relative;
+  clip-path: polygon(50% 0, 95% 25%, 95% 75%, 50% 100%, 5% 75%, 5% 25%);
 }
 
 .circle-img:hover {
@@ -117,6 +127,17 @@
   right: -5px;
 }
 
+.content h5{
+  margin: 0px;
+}
+.content .line-a{
+  margin: 70px 0px;
+  width: 100%;
+}
+.content a{
+    font-size: 80px;
+    color: aliceblue;
+}
 .sidebar input {
   padding: 5px 10px;
   box-sizing: border-box;
@@ -134,7 +155,12 @@
   margin-bottom: 5px;
   min-width: 20px;
 }
-
+.content span{
+  color: rgb(115 145 236);
+  font-size: 20px;
+  margin-bottom: 5px;
+  font-weight: bold;
+}
 .sidebar label {
   color: #c2c2c2;
   font-weight: bold;
@@ -146,6 +172,7 @@
   bottom: -5px;
   right: -5px;
 }
+
 
 .i {
   color: white;
@@ -284,9 +311,39 @@
   margin: 10px auto;
 }
 
+
+.social-net{
+  display: grid;
+  grid-template-rows: 100px 100px;
+  grid-template-columns: 1fr 1fr 1fr 1fr ;
+  grid-template-areas:
+  "area1 area1  area2 area2"
+  "area3 area3  area4 area4";
+}
+
+.fa-icon {
+  text-align: center;
+  grid-area: area1;
+}
+
+.twi-icon {
+  text-align: center;
+  grid-area: area2;
+}
+
+.git-icon {
+  color: #e2e2e2;
+  text-align: center;
+  grid-area: area3;
+}
+.linked-icon {
+  text-align: center;
+  grid-area: area4;
+}
+
 @media (max-width: 540px) {
   .container {
-    grid-template-areas: "sidebar" "cont";
+    grid-template-areas: "sidebar" "cont" "education";
     grid-template-columns: 1fr;
   }
 }
@@ -294,8 +351,19 @@
 @media (max-width: 714px) and (min-width: 541px) {
   .container {
     width: 100vw;
-    grid-template-columns: 1fr 2fr;
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+  .content{
+    padding: 5px;
   }
 }
 
-@media (max-width: 980px) {}
+@media (max-width: 980px) and (min-width: 715px) {
+  .container {
+    width: 100vw;
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+  .content{ 
+    padding: 5px;
+  }
+}
