--- a/view_curriculum.css
+++ b/view_curriculum.css
@@ -8,7 +8,7 @@
   grid-template-columns: 1fr 1fr 1fr;
   background-image: url('/Assets/wallpaper-blur.png');
   background-size: 100%;
-  background-position-y: -45%;
+  background-position-y: -90%;
   background-repeat: no-repeat;
   background-attachment: scroll;
 }
@@ -309,6 +309,23 @@
   border: 1px dashed;
   color: black;
   margin: 10px auto;
+}
+
+.float-btn{
+	position:fixed;
+	width:60px;
+	height:60px;
+	bottom:40px;
+	right:40px;
+	background-color:rgb(0, 112, 34);
+	color:rgb(233, 233, 233);
+	border-radius:50px;
+	text-align:center;
+	box-shadow: 2px 2px 3px #999;
+}
+
+.icon-float{
+	margin-top:20px;
 }
 
 
