--- a/view_curriculum.css
+++ b/view_curriculum.css
@@ -44,6 +44,7 @@
   color: #ffff;
   text-transform: uppercase;
   letter-spacing: 2px;
+  margin: 0;
   }
 
   .h2-b{
@@ -91,7 +92,8 @@
 
 .subtitle {
   font-family: sans-serif;
-  color: #ffff;
+  color: rgb(115 145 236);
+  margin: 10px 0;
 }
 
 .img-container {
@@ -127,9 +129,6 @@
   right: -5px;
 }
 
-.content h5{
-  margin: 0px;
-}
 .content .line-a{
   margin: 70px 0px;
   width: 100%;
@@ -161,6 +160,11 @@
   margin-bottom: 5px;
   font-weight: bold;
 }
+
+.content p{
+  color: whitesmoke;
+}
+
 .sidebar label {
   color: #c2c2c2;
   font-weight: bold;
@@ -332,10 +336,10 @@
 .social-net{
   display: grid;
   grid-template-rows: 100px 100px;
-  grid-template-columns: 1fr 1fr 1fr 1fr ;
+  grid-template-columns: 1fr 1fr ;
   grid-template-areas:
-  "area1 area1  area2 area2"
-  "area3 area3  area4 area4";
+  "area1   area2"
+  "area3  area4";
 }
 
 .fa-icon {
@@ -357,6 +361,8 @@
   text-align: center;
   grid-area: area4;
 }
+
+
 
 @media (max-width: 540px) {
   .container {
